Apply to har operations command